# 0x88

./: .dockerignore  .gitattributes  .gitignore  Nibbler.standalone.html  README.md  UX_AUDIT.md  autoresearch.checks.sh  autoresearch.config.json  autoresearch.context.jsonl  autoresearch.ideas.jsonl  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.scheduler.json  autoresearch.sh  autoresearch.tree.json  autoresearch.tree.jsonl  berserk-smoke.html  browser-benchmark.html  browser-eval-broker-prototype.html  browser-multimodel-arena.html  browser-ort-bridge-benchmark.html  browser-rust-wasm-webgpu-benchmark.html  browser-two-model-arena.html  browser-wasm-selfplay-broker.html  client-demo.html  docs.html  dovetail.checks.sh  dovetail.context.jsonl  dovetail.ideas.jsonl  dovetail.md  dovetail.runs.jsonl  dovetail.scheduler.json  dovetail.sh  dovetail.tree.json  dovetail.tree.jsonl  index.html  lc0-analysis.html  lc0-arena.html  lc0-maia3-smoke.html  (+17 more)
.ralph/: analysis-roi.md  lc0-wgsl-readback-next-roi.md  lc0-wgsl-readback-next2-roi.md
cloudflare/: artifact-assets-worker.mjs  artifacts.wrangler.toml
contracts/: README.md
data/: distill_seed_positions.fen  lichess_smoke.pgn  seed_positions.fen  selfplay_opening_starts.fen  teacher_corrections_selfplay_mix_arena.jsonl  teacher_labels.sample.jsonl
docs/: 100m-scaling-training-plan.md  10m-100m-dataset-build-todo.md  BT4_diagrammed.md  BT4_response.md  Deepseek_Chess_ideas.md  README.md  Turbo_quant_chess_ideas.md  architecture-ladder-1m-64x6-smoke.md  arena-time-parity.md  arena_analysis_roadmap.md  artifact_hosting_cache_strategy.md  artifact_retention_rollback_policy.md  audit_2026-05-09.md  audit_2026-05-09_quickfixes.md  aws_distributed_cache_setup.md  berserk_browser_benchmarks.md  berserk_simd_emscripten_node_bench_2026-06-09_depth9-11.json  browser-safe-parallel-mcts.md  browser_c_engine_porting.md  browser_runtime.md  browser_runtime_configuration_and_benchmark_schema.md  browser_uci_adapter_contract.md  cdn_artifact_caching.md  channelformer_architecture.md  chessformer_handoff.md  chessformer_ideas.md  cloud_job_guardrails.md  cloudflare_r2_artifact_validation.md  cpu_engines_simd_audit.md  cpu_wasm_runtimes.md  crowd_vs_engine_notes.md  deepresearch_architecture_triage_2026-05.md  deepseek_methods_roadmap.md  deepseek_searchlight_architectures.md  distributed_selfplay_training_system_design.md  elo-evaluation-process.md  en_croissant_feature_ideas.md  engine_artifact_distribution.md  engine_catalog.md  engine_packaging_reorg.md  (+121 more)
eval/: adapter_policy_key_parity_check.mjs  anchor_blunder_diagnostics.py  architecture_suite.mjs  arena_json_to_pgn.mjs  arena_suite.mjs  bayesian_aux_puct_tune.mjs  benchmark_spec.json  browser_multimodel_arena_cdp.mjs  build_model_manifest.py  build_queen_risk_suite.py  chess_ocean_tests.mjs  (+44 more)
rust/tiny_leela_core/: Cargo.toml
rust/tiny_leela_core/src/: batch_eval.rs  board.rs  encoding.rs  eval.rs  eval_cache.rs  fen.rs  jsonl.rs  lib.rs  matchplay.rs  move_codec.rs  movegen.rs  onnx.rs  search.rs  squareformer.rs
(+886 files in other folders)
