[package]
name = "tiny_leela_core"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM-ready core chess and feature infrastructure for Tiny Leela"

[features]
default = []
native-ort = ["dep:ort"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "tls-rustls", "copy-dylibs", "api-24"] }

[lib]
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "tiny-leela-rust-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "tiny-leela-rust-eval"
path = "src/bin/eval.rs"

[[bin]]
name = "tiny-leela-rust-trace"
path = "src/bin/trace.rs"

[[bin]]
name = "tiny-leela-rust-selfplay"
path = "src/bin/selfplay.rs"

[[bin]]
name = "tiny-leela-rust-arena"
path = "src/bin/arena.rs"

[[bin]]
name = "tiny-leela-rust-feature-cache"
path = "src/bin/feature_cache.rs"

[[bin]]
name = "tiny-leela-rust-onnx-card"
path = "src/bin/onnx_card.rs"

[[bin]]
name = "tiny-leela-rust-onnx-matrix"
path = "src/bin/onnx_matrix.rs"

[[bin]]
name = "tiny-leela-rust-puct-sweep"
path = "src/bin/puct_sweep.rs"

[[bin]]
name = "tiny-leela-rust-bayes-puct"
path = "src/bin/bayes_puct.rs"

[[bin]]
name = "tiny-leela-rust-dataset-dedupe"
path = "src/bin/dataset_dedupe.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
